# kinum

./: CMakeLists.txt  LICENSE  README.md  gpl-3.0.txt
applet/: CMakeLists.txt  README.txt  plasma-applet-kinum.desktop
applet/package/: metadata.desktop
backends/: CMakeLists.txt
backends/internode/: README  kinum-dsb-internode.desktop
dataengine/: CMakeLists.txt  plasma-engine-kinum.desktop
test/resources/dsb/internode/: 123456.xml  history.xml  service.xml  usage.xml  v1.5.xml
